[jpa error] immutable lists to mutable